--- a/project.config.json
+++ b/project.config.json
@@ -13,6 +13,7 @@
     "minified": true,
     "enhance": true,
     "showShadowRootInWxmlPanel": true,
+    "packNpmManually": true,
     "packNpmRelationList": [],
     "babelSetting": {
       "ignore": [],
