1.完善蓝牙搜索、断开、连接 2.优化wifi 3.主页增加实时数据请求

--- a/app.json
+++ b/app.json
@@ -2,7 +2,9 @@
   "pages": [
     "pages/home/home",
     "pages/index/index",
-    "pages/blue/blue"
+    "pages/blue/blue",
+    "pages/report/report",
+    "pages/report"
   ],
   "window": {
     "navigationBarTextStyle": "black",
