--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,7 +3,8 @@
   "projectname": "BluetoothTest",
   "setting": {
     "compileHotReLoad": true,
-    "skylineRenderEnable": true
+    "skylineRenderEnable": true,
+    "bigPackageSizeSupport": true
   },
   "libVersion": "3.8.9"
 }
